@@ -21,11 +21,10 @@ import org.pageseeder.diffx.test.RandomStringFactory;
 import org.pageseeder.diffx.token.impl.XMLAttribute;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
-public final class AttributeXMLTokenTest {
+final class AttributeXMLTokenTest {
 
   @Test
   void testEquals() {
@@ -39,7 +38,7 @@ public final class AttributeXMLTokenTest {
 
   @Test
   void testNotEquals() {
-    List<AttributeToken> tokens = Arrays.asList(
+    List<AttributeToken> tokens = List.of(
         new XMLAttribute("title", "test"),
         new XMLAttribute("title", "test2"),
         new XMLAttribute("title2", "test"),
@@ -51,7 +50,7 @@ public final class AttributeXMLTokenTest {
   }
 
   @Test
-  public void testHashcodeCollisions() {
+  void testHashcodeCollisions() {
     RandomStringFactory factory = new RandomStringFactory();
     List<AttributeToken> tokens = new ArrayList<>();
     for (int i = 0; i < 10_000; i++) {
@@ -65,7 +64,7 @@ public final class AttributeXMLTokenTest {
 
 
   @Test
-  public void testPerformance() {
+  void testPerformance() {
     String[] uris = new String[]{"", "https://example.org", "https://example.net"};
     String[] names = new String[]{"alt", "title", "id", "value", "option", "name", "xml:title", "hidden"};
     String[] values = new String[]{"",
