@@ -21,11 +21,10 @@ import org.pageseeder.diffx.test.RandomStringFactory;
 import org.pageseeder.diffx.token.impl.XMLEndElement;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
-public class EndElementXMLTokenTest {
+class EndElementXMLTokenTest {
 
   @Test
   void testEquals() {
@@ -39,7 +38,7 @@ public class EndElementXMLTokenTest {
 
   @Test
   void testNotEquals() {
-    List<EndElementToken> tokens = Arrays.asList(
+    List<EndElementToken> tokens = List.of(
         new XMLEndElement("test"),
         new XMLEndElement("test2"),
         new XMLEndElement("https://example.org", "test"),
@@ -49,7 +48,7 @@ public class EndElementXMLTokenTest {
   }
 
   @Test
-  public void testHashcodeCollisions() {
+  void testHashcodeCollisions() {
     RandomStringFactory factory = new RandomStringFactory();
     List<EndElementToken> tokens = new ArrayList<>();
     for (int i = 0; i < 10_000; i++) {
@@ -62,7 +61,7 @@ public class EndElementXMLTokenTest {
 
 
   @Test
-  public void testPerformance() {
+  void testPerformance() {
     String[] uris = new String[]{"", "https://example.org", "https://example.net"};
     String[] names = new String[]{"alt", "title", "id", "value", "option", "name", "hidden"};
     List<EndElementToken> tokens1 = new ArrayList<>();
